# OpenFactory

./: .clang-format  CMakeLists.txt
src/: main.c
src/game/: CMakeLists.txt  controls.c  game.c  game.h  player.c  world.c
